--- a/shopapp-Angular/src/index.html
+++ b/shopapp-Angular/src/index.html
@@ -18,8 +18,8 @@
   <!-- <app-root></app-root> -->
   <!-- <app-order></app-order> -->
   <!-- <app-order-confirm></app-order-confirm> -->
-  <!-- <app-login></app-login> -->
+  <app-login></app-login>
   <!-- <app-register></app-register> -->
-  <app-detail-product></app-detail-product>
+  <!-- <app-detail-product></app-detail-product> -->
 </body>
 </html>
